test/stack.err

Error at line 1:

^ : syntax error, unexpected kVAR, expecting kPROGRAM 

Error at line 9:

^ : Undeclared array name f